--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -8,37 +8,35 @@
 Vagrant.configure(2) do |config|
 
   config.vm.provision "shell", inline: "echo Hello"
+  #config.vbguest.auto_update = false
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
-  config.vm.define "uim_twitter_docker_dev", primary: true, autostart: true do |uim_twitter_docker_dev|
-    uim_twitter_docker_dev.vm.box = "boxcutter/centos71"
-    uim_twitter_docker_dev.vm.synced_folder "~/git/twiter_elk/", "/develop"
-    uim_twitter_docker_dev.vm.synced_folder ".", "/vagrant", disabled: true
-    uim_twitter_docker_dev.vm.network "private_network", type: "dhcp"
-    uim_twitter_docker_dev.vm.provision "shell", path: "install-devtools/install-devtools.sh"
-    uim_twitter_docker_dev.vm.provision "shell", path: "install-dockertools/install-dockertools.sh"
-    uim_twitter_docker_dev.vm.provision "docker"
-    uim_twitter_docker_dev.vm.provision :docker_compose, yml: ["/develop/docker/docker-compose.yml"], rebuild: true, project_name: "twitter", run: "always"
-    # Create a forwarded port mapping which allows access to a specific port
-    # within the machine from a port on the host machine. In the example below,
-    # accessing "localhost:8080" will access port 80 on the guest machine.
-    # config.vm.network "forwarded_port", guest: 80, host: 8080
-    uim_twitter_docker_dev.vm.network "forwarded_port", guest: 80, host: 8083
-    uim_twitter_docker_dev.vm.provider "virtualbox" do |vb|
+  config.vm.define "uim_twitter_dev", primary: true, autostart: true do |uim_twitter_dev|
+    uim_twitter_dev.vm.box = "bento/centos-7.2"
+    uim_twitter_dev.vm.network "private_network", ip: "192.168.50.5"
+    uim_twitter_dev.vm.synced_folder "../../twiter_elk", "/dev/workspace"
+    uim_twitter_dev.vm.synced_folder ".", "/vagrant", disabled: true
+    uim_twitter_dev.vm.provision "shell", path: "install-devtools/install-devtools.sh"
+    uim_twitter_dev.vm.provision "shell", path: "install-chef/install-chef.sh"
+    uim_twitter_dev.vm.provision "shell", path: "install-chef/run-chef.sh", run: "always"
+    
+    uim_twitter_dev.vm.network "forwarded_port", guest: 80, host: 8083
+    uim_twitter_dev.vm.provider "virtualbox" do |vb|
       # Display the VirtualBox GUI when booting the machine
       vb.gui = false
       # Customize the amount of memory on the VM:
       vb.memory = "2048"
-      vb.name = "UIM_DOCKER_ELK_MINT_USER"
+      vb.name = "UIM_ELK_MINT_USER"
       vb.cpus = 4
     end
-    #
+    #entities.user_mentions.id_str:'13796572'
+    #http://localhost:8083/app/kibana#/discover/mint_query_search?_g=(filters:!(),refreshInterval:(display:'10%20seconds',pause:!f,section:1,value:10000),time:(from:now-1h,mode:quick,to:now))&_a=(columns:!(text,retweeted_status.text,user.screen_name,entities.hashtags,tags,geo),filters:!(),index:'idx_ls*',interval:auto,query:(query_string:(analyze_wildcard:!t,query:'entities.user_mentions.id_str:%2213796572%22')),sort:!('@timestamp',desc))
     # Enable provisioning with a shell script. Additional provisioners such as
     # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
     # documentation for more information about their specific syntax and use.
-     uim_twitter_docker_dev.vm.provision "shell", inline: <<-SHELL
-       echo "Hello Uimirror Docker ELK POC user"
+     uim_twitter_dev.vm.provision "shell", inline: <<-SHELL
+       echo "Hello Uimirror ELK POC user"
      SHELL
 
   end
